tools lib traceevent: Add plugin for tlb_flush
jira LE-1907
Rebuild_History Non-Buildable kernel-4.18.0-294.el8
commit-author Steven Rostedt (Red Hat) <rostedt@goodmis.org>
commit 3e14b100b0ac36bc430a4b9fb3e683dffac8b866

The tlb_flush tracepoints uses enums that are not yet known by the
traceevent library. Add a plugin to handle that.

Link: http://lore.kernel.org/linux-trace-devel/20200625100516.365338-9-tz.stoyanov@gmail.com

	Signed-off-by: Steven Rostedt (VMware) <rostedt@goodmis.org>
[ Ported from trace-cmd.git ]
	Cc: Andrew Morton <akpm@linux-foundation.org>
	Cc: Jiri Olsa <jolsa@redhat.com>
	Cc: Namhyung Kim <namhyung@kernel.org>
	Cc: linux-trace-devel@vger.kernel.org
Link: http://lore.kernel.org/lkml/20200702185704.706977382@goodmis.org
	Signed-off-by: Tzvetomir Stoyanov (VMware) <tz.stoyanov@gmail.com>
	Signed-off-by: Arnaldo Carvalho de Melo <acme@redhat.com>
(cherry picked from commit 3e14b100b0ac36bc430a4b9fb3e683dffac8b866)
	Signed-off-by: Jonathan Maple <jmaple@ciq.com>

--- a/tools/lib/traceevent/plugins/Makefile
+++ b/tools/lib/traceevent/plugins/Makefile
@@ -137,6 +137,7 @@ PLUGINS += plugin_function.so
 PLUGINS += plugin_xen.so
 PLUGINS += plugin_scsi.so
 PLUGINS += plugin_cfg80211.so
+PLUGINS += plugin_tlb.so
 
 PLUGINS    := $(addprefix $(OUTPUT),$(PLUGINS))
 PLUGINS_IN := $(PLUGINS:.so=-in.o)
