umh: Separate the user mode driver and the user mode helper support
jira LE-1907
Rebuild_History Non-Buildable kernel-4.18.0-294.el8
commit-author Eric W. Biederman <ebiederm@xmission.com>
commit 884c5e683b67dbc52892e24c29eed864f330ec08

This makes it clear which code is part of the core user mode
helper support and which code is needed to implement user mode
drivers.

This makes the kernel smaller for everyone who does not use a usermode
driver.

v1: https://lkml.kernel.org/r/87tuyyf0ln.fsf_-_@x220.int.ebiederm.org
v2: https://lkml.kernel.org/r/87imf963s6.fsf_-_@x220.int.ebiederm.org
Link: https://lkml.kernel.org/r/20200702164140.4468-5-ebiederm@xmission.com
	Reviewed-by: Greg Kroah-Hartman <gregkh@linuxfoundation.org>
	Acked-by: Alexei Starovoitov <ast@kernel.org>
	Tested-by: Alexei Starovoitov <ast@kernel.org>
	Signed-off-by: "Eric W. Biederman" <ebiederm@xmission.com>
(cherry picked from commit 884c5e683b67dbc52892e24c29eed864f330ec08)
	Signed-off-by: Jonathan Maple <jmaple@ciq.com>

--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -13,6 +13,7 @@ obj-y     = fork.o exec_domain.o panic.o \
 	    async.o range.o smpboot.o ucount.o \
 	    rh_taint.o rh_features.o
 
+obj-$(CONFIG_BPFILTER) += usermode_driver.o
 obj-$(CONFIG_MODULES) += kmod.o
 obj-$(CONFIG_MULTIUSER) += groups.o
 
