SFH: PCIe driver to add support of AMD sensor fusion hub
jira LE-1907
Rebuild_History Non-Buildable kernel-4.18.0-365.el8
commit-author Sandeep Singh <sandeep.singh@amd.com>
commit 4f567b9f8141a86c7d878fadf136e5d1408e3e61

AMD SFH (Sensor Fusion Hub) is a solution running on MP2
(which is ARM core connected to x86 for processing sensor data).
AMD SFH uses HID over PCI bus to form the HID descriptors and
talks to HID clients like the monitor-sensor/iio-proxy. MP2 which
is exposed as a PCI device to the x86, uses mailboxes to talk to
MP2 firmware to send/receive commands.

Co-developed-by: Nehal Shah <Nehal-bakulchandra.Shah@amd.com>
	Signed-off-by: Nehal Shah <Nehal-bakulchandra.Shah@amd.com>
	Signed-off-by: Sandeep Singh <sandeep.singh@amd.com>
	Signed-off-by: Jiri Kosina <jkosina@suse.cz>
(cherry picked from commit 4f567b9f8141a86c7d878fadf136e5d1408e3e61)
	Signed-off-by: Jonathan Maple <jmaple@ciq.com>

--- a/drivers/hid/Kconfig
+++ b/drivers/hid/Kconfig
@@ -1170,4 +1170,6 @@ source "drivers/hid/i2c-hid/Kconfig"
 
 source "drivers/hid/intel-ish-hid/Kconfig"
 
+source "drivers/hid/amd-sfh-hid/Kconfig"
+
 endmenu
